nelisquare (0.5.1) stable; urgency=low
  * Venue add function
  * Bug fixes
  * Venues list update
  * Language pack update
  * Full-sized photos view&save
  * Delete-events at feed

 -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 24 Jun 2013 01:07:50 +0400

nelisquare (0.5.0) stable; urgency=low
  * Specials support
  * UI Reload
  * Photo upload dialog
  * Internalization
  * Settings page update
  * Debug info submission
  * Award badge, like page, update page, like page update, like venue, save venue, save tip, save list, new tip, new friend, connect app events added to feed
  * Users who liked page added
  * Api structure update

 -- Basil Semuonov <basil.semuonov@gmail.com>  Sat, 08 Jun 2013 14:53:42 +0400

nelisquare (0.4.10) stable; urgency=low
  * dialogs updates
  * background mode added
  * bug fixes

 -- Basil Semuonov <basil.semuonov@gmail.com>  Sat, 15 Dec 2012 02:01:13 +0400

nelisquare (0.4.9) stable; urgency=low
  * notifications at home screen
  * homescreen feed integration
  * awesome toolbars & menus
  * settings page update
  * bug fixes

 -- Basil Semuonov <basil.semuonov@gmail.com>  Fri, 14 Dec 2012 14:09:38 +0400

nelisquare (0.4.8) stable; urgency=low
  * api key changed
  * feed updates & all latest checkins
  * pan&pinch on maps and full photos
  * new theming engine & api update
  * bug fixes, layout updates

 -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 03 Dec 2012 20:51:15 +0400

nelisquare (0.4.7) stable; urgency=low
  * tips support
  * unreaded notifications marked
  * dark theme (beta)
  * user profile updates
  * venuemap page, route to venue (beta)
  * layout updates, batch loading of stuff

 -- Basil Semuonov <basil.semuonov@gmail.com>  Wed, 07 Nov 2012 23:00:00 +0400

nelisquare (0.4.6) stable; urgency=low
  * likes, comments count preview at checkin feed and history
  * checkins feed autoupdate
  * gps uplock timeout
  * notification fixes