@@ -1,3 +1,3 @@
-var build = '201306240111';
+var build = '201306250052';
 var version = "0.5.1";
-var changelog = " - Venue add function  - Bug fixes  - Venues list update  - Language pack update  - Full-sized photos view&save  - Delete-events at feed ";
+var changelog = " - User avatar upload  - Venue add function  - Bug fixes  - Venues list update  - Language pack update  - Full-sized photos view&save  - Delete-events at feed ";
